--- a/header.css
+++ b/header.css
@@ -1,9 +1,34 @@
+
+.footer{
+  position: relative;
+  background-color: #6b7a8f;
+  padding-top: 3%;
+  margin-left: 0%;
+  margin-right: 0%;
+ 
+}
+.sm{
+  margin: 5px 10px 10px 5px;
+}
+iframe{
+  margin-left: 100px;
+  margin-top: 5px;
+}
+.first{
+  text-align: center;
+}
+.third{
+  text-align: center;
+}
+body{
+  background-color: #fff;
+}
 .VCn{
     padding-top:30px;
     padding-bottom:30px;
     top:0;
     width:100%;
-    z-index:1;
+   
     position: fixed;
   }
   
@@ -36,7 +61,7 @@
   width:100%;
   height:100%;
   overflow:hidden;
-  position:absolute;
+  position:relative;
   top:0;
   bottom:0;
   left:0;
@@ -55,7 +80,7 @@
   .VCright .icon {
     display: none;
   }
-  
+
 @media screen and (max-width:768px)
 {
  .VCright a{
