--- a/header.css
+++ b/header.css
@@ -1,9 +1,34 @@
+
+.footer{
+  position: relative;
+  background-color: #6b7a8f;
+  padding-top: 3%;
+  margin-left: 0%;
+  margin-right: 0%;
+ 
+}
+.sm{
+  margin: 5px 10px 10px 5px;
+}
+iframe{
+  margin-left: 100px;
+  margin-top: 5px;
+}
+.first{
+  text-align: center;
+}
+.third{
+  text-align: center;
+}
+body{
+  background-color: #fff;
+}
 .VCn{
     padding-top:30px;
     padding-bottom:30px;
     top:0;
     width:100%;
-    z-index:1;
+   
     position: fixed;
   }
   
@@ -36,7 +61,7 @@
   width:100%;
   height:100%;
   overflow:hidden;
-  position:absolute;
+  position:relative;
   top:0;
   bottom:0;
   left:0;
@@ -55,7 +80,228 @@
   .VCright .icon {
     display: none;
   }
+
+
+  .VCright.responsive a {
+    float:none;
+    display: block;
+    text-align: center;
+    
+  }
+  .VCright.responsive{
+   width:100%;
+   background-color: black;
+    text-align:center;
+    font-size:90%;
+    color:blanchedalmond;
+  }
+  .VCright.responsive a:hover{
+    color: blue;
+    }
+/*...........................*/
+.testimonial_m{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #6b7a8f;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.container{
+  width: 1400px;/*1200*/
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 80px;
+  box-sizing: border-box;
+  padding: 20px;
+}
+.container .box
+{
+  position: relative;
+  padding: 80px 40px 40px;
+  transition: 0.5s;
+  text-align: center;
+  background: #DCC7AA;
+}
+.container .box:hover
+{
+  background: #F7882F;
+}
+.container .box p{
+  margin: 0;
+  padding: 0;
+  transition: 0.5s;
+}
+.container .box h4
+{
+  margin: 20px 0 0;
+  padding: 0;
+  transition: 0.5s;
+  font-size: 18px;
+  color: #F7882F;
+  font-weight: 700;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+.container .box h4 span
+{
+  font-weight: 600;
+  font-size: 14px;
+  color: #F7882F;
+  transition: 0.5s;
+}
+.container .box:hover p,
+.container .box:hover h4,
+.container .box:hover h4 span
+{
+  color: #DCC7AA;
+}
+.container .box .imgBox
+{
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.container .box:hover {
+  color: #DCC7AA;
+  background-color: #F7882F;
+}
+
+.container .box:hover::before,
+.container .box:hover::after {
+    opacity: 1;
+  }
   
+  .container .box:hover::before {
+    transform: rotate(180deg) translateY(-60px);
+  }
+  
+  .container .box:hover::after {
+    transform: translateY(-60px);
+  }
+
+.container .box::before,
+.container .box::after {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath d='M0 4v12h8a8 8 0 0 1-8 8v4a12 12 0 0 0 12-12V4H0zM20 4v12h8a8 8 0 0 1-8 8v4a12 12 0 0 0 12-12V4H20z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  opacity: 0.05;
+  transition: 0.5s;
+}
+
+.container .box::before {
+  content: open-quote;
+  left: 40px;
+  bottom: 20px;
+  transform: rotate(180deg);
+}
+
+.container .box::after {
+  content: close-quote;
+  top: 20px;
+  right: 40px;
+}
+
+/* .......................... */
+.gg-con{
+  padding: 5px;
+  background-color: #dcc7aa;
+  border: #f2c331 solid 27px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+.con-1{
+  font-size: 12px;
+  color: #6b7a8f;
+  display: flex;
+  width: 33%;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+}
+.con-1 img{
+  
+  height: 48%;
+  width: 26%;
+}
+.count , .gg-h{
+  display: inline;
+  font-size: 30px;
+  margin-left: 10px;
+
+
+}
+
+@media (max-width:1273px) {
+   .con-1{
+       flex-direction: column;
+      }
+      .count{
+  display: inline;
+  font-size: 20px;
+  margin-left: 0px;
+
+
+}
+.gg-h{
+  display: inline;
+text-transform: capitalize;
+  font-size: 20px;
+  margin: 10px;
+}
+}
+@media (max-width:699px) {
+   .gg-con{
+       flex-direction: column;
+      
+   }
+   .con-1{
+       flex-direction: row;
+       width: 100%;
+
+   }
+   .count{
+  display: inline;
+  font-size: 20px;
+  margin-left: 10px;
+
+
+}
+.gg-h{
+  display: inline;
+text-transform: capitalize;
+  font-size: 20px;
+  margin: 10px;
+}
+}
+/* ................... */
+@media screen and (max-width: 600px) {
+  .VCright.responsive {position: relative;}
+  .VCright.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
+/* ,,,,,,,,,,, */
+
 @media screen and (max-width:768px)
 {
  .VCright a{
@@ -82,29 +328,4 @@
     width:15%;
     height:15%;
   }
-}
-
-@media screen and (max-width: 600px) {
-  .VCright.responsive {position: relative;}
-  .VCright.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .VCright.responsive a {
-    float:none;
-    display: block;
-    text-align: center;
-    
-  }
-  .VCright.responsive{
-   width:100%;
-   background-color: black;
-    text-align:center;
-    font-size:90%;
-    color:blanchedalmond;
-  }
-  .VCright.responsive a:hover{
-    color: blue;
-    }
 }
