--- a/header.css
+++ b/header.css
@@ -98,6 +98,121 @@ body{
   .VCright.responsive a:hover{
     color: blue;
     }
+/*...........................*/
+.testimonial_m{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #6b7a8f;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.container{
+  width: 1400px;/*1200*/
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 80px;
+  box-sizing: border-box;
+  padding: 20px;
+}
+.container .box
+{
+  position: relative;
+  padding: 80px 40px 40px;
+  transition: 0.5s;
+  text-align: center;
+  background: #DCC7AA;
+}
+.container .box:hover
+{
+  background: #F7882F;
+}
+.container .box p{
+  margin: 0;
+  padding: 0;
+  transition: 0.5s;
+}
+.container .box h4
+{
+  margin: 20px 0 0;
+  padding: 0;
+  transition: 0.5s;
+  font-size: 18px;
+  color: #F7882F;
+  font-weight: 700;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+.container .box h4 span
+{
+  font-weight: 600;
+  font-size: 14px;
+  color: #F7882F;
+  transition: 0.5s;
+}
+.container .box:hover p,
+.container .box:hover h4,
+.container .box:hover h4 span
+{
+  color: #DCC7AA;
+}
+.container .box .imgBox
+{
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.container .box:hover {
+  color: #DCC7AA;
+  background-color: #F7882F;
+}
+
+.container .box:hover::before,
+.container .box:hover::after {
+    opacity: 1;
+  }
+  
+  .container .box:hover::before {
+    transform: rotate(180deg) translateY(-60px);
+  }
+  
+  .container .box:hover::after {
+    transform: translateY(-60px);
+  }
+
+.container .box::before,
+.container .box::after {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath d='M0 4v12h8a8 8 0 0 1-8 8v4a12 12 0 0 0 12-12V4H0zM20 4v12h8a8 8 0 0 1-8 8v4a12 12 0 0 0 12-12V4H20z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  opacity: 0.05;
+  transition: 0.5s;
+}
+
+.container .box::before {
+  content: open-quote;
+  left: 40px;
+  bottom: 20px;
+  transform: rotate(180deg);
+}
+
+.container .box::after {
+  content: close-quote;
+  top: 20px;
+  right: 40px;
+}
 
 /* .......................... */
 .gg-con{
